plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'bokjak'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'


configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.5'

	//swagger 추가
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	//spring security 추가
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'

	//jjwt 추가
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// queryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// JSON 컬럼 호환성
	implementation 'com.vladmihalcea:hibernate-types-60:2.20.0'


	// mail 추가
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//thymeleaf 추가
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

	// S3
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// fcm 추가
	implementation("com.google.firebase:firebase-admin:6.8.1")
	implementation("com.squareup.okhttp3:okhttp:4.9.1")

	// json simple
	implementation("com.googlecode.json-simple:json-simple:1.1.1")

	// CloudWatch logs
	implementation("ca.pjer:logback-awslogs-appender:1.6.0")

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// IOUtils
	implementation 'commons-io:commons-io:2.7'
}

tasks.named('test') {
	useJUnitPlatform()
}


// gradlew 빌드시 에러 발생방지, 빌드시 -plain.jar 생기는 설정 끄기 for Github Actions
jar {
	enabled = false
}

// jar 파일 이름 설정
bootJar {
	archiveFileName = "buzzing-server.jar"
}

// queryDSL 설정부 필요 없음. https://www.inflearn.com/questions/828947/build%EA%B4%80%EB%A0%A8-%EC%A7%88%EB%AC%B8%EB%93%9C%EB%A6%BD%EB%8B%88%EB%8B%A4
